buttom hover and active fixed on mobile device

--- a/src/components/button/button.style.scss
+++ b/src/components/button/button.style.scss
@@ -6,27 +6,31 @@
     border: 0px;
     place-items: center;
     
-    @media (hover: hover){
+    @media (pointer: fine){
         &:hover{
             background-color: rgba($color: #89eeb6, $alpha: 0.3);
         }
     }
 
-    @media (hover: none){
-        
+    @media (pointer: coarse){
+        &:active{
+            background-color: rgba($color: #89eeb6, $alpha: 0.3);
+        }
     }
 
     &.specialButton{
         color: lightcoral;
 
-        @media (hover: hover){
+        @media (pointer: fine){
             &:hover{        
                 background-color: rgba($color: #f08080, $alpha: 0.4);
             }
         }
     
-        @media (hover: none){
-            background-color: rgba($color: #f08080, $alpha: 0.4);
+        @media (pointer: coarse){
+            &:active{
+                background-color: rgba($color: #f08080, $alpha: 0.4);
+            }
         }
         
     }
